--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h1>Project Mestixz</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Wiki</a></li>
