--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="banner" >
+            <div class="name">
+                <h4>Project</h4>
+                <h1>Mestixz</h1>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
