add about section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1>Project Mestixz</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#banner">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Wiki</a></li>
             </ul>
@@ -29,11 +29,25 @@
     </header>
 
     <main>
-        <section class="banner" >
+
+        <section class="banner" id="banner">
             <div class="name">
                 <h4>Project</h4>
                 <h1>Mestixz</h1>
             </div>
+        </section>
+
+        <section class="about" id="about">
+            <h1>The world beyond imagination.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Vivamus efficitur eros eget bibendum vehicula. Suspendisse non purus sed quam finibus tempor. 
+            Mauris rutrum et quam vel pharetra. Pellentesque efficitur semper ex, vitae finibus ipsum tincidunt ac. 
+            Curabitur ac justo risus. Quisque eu orci sapien. Nulla interdum, lorem a lobortis imperdiet, 
+            tortor magna efficitur sem, placerat efficitur ipsum diam sed odio. Etiam id rutrum ex. 
+            Nullam consequat elementum quam a luctus.</p>
+        </section>
+        <section class="games">
+            
         </section>
     </main>
 </body>
