add game section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#banner">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="#games">Games</a></li>
                 <li><a href="#">Wiki</a></li>
             </ul>
         </nav>
@@ -46,8 +46,46 @@
             tortor magna efficitur sem, placerat efficitur ipsum diam sed odio. Etiam id rutrum ex. 
             Nullam consequat elementum quam a luctus.</p>
         </section>
-        <section class="games">
-            
+        <section class="games" id="games">
+            <h1>Games</h1>
+            <div class="game-selection">
+                <div class="content">
+                    <h2>Worship</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et turpis enim. 
+                        Proin non nunc aliquam, tristique augue quis, posuere turpis. 
+                        Etiam dui dolor, elementum eu congue non, varius vel turpis. Aenean eget auctor turpis. 
+                        Ut scelerisque purus ut dolor elementum bibendum. In vitae porttitor justo. 
+                        Quisque sed hendrerit massa.
+                    </p>
+                </div>
+                <div class="content">
+                    <h2>Moonfall</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et turpis enim. 
+                        Proin non nunc aliquam, tristique augue quis, posuere turpis. 
+                        Etiam dui dolor, elementum eu congue non, varius vel turpis. Aenean eget auctor turpis. 
+                        Ut scelerisque purus ut dolor elementum bibendum. In vitae porttitor justo. 
+                        Quisque sed hendrerit massa.
+                    </p>
+                </div>
+                <div class="content">
+                    <h2>Elven Abyss</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et turpis enim. 
+                        Proin non nunc aliquam, tristique augue quis, posuere turpis. 
+                        Etiam dui dolor, elementum eu congue non, varius vel turpis. Aenean eget auctor turpis. 
+                        Ut scelerisque purus ut dolor elementum bibendum. In vitae porttitor justo. 
+                        Quisque sed hendrerit massa.
+                    </p>
+                </div>
+                <div class="content">
+                    <h2>Future War (I - VI)</h2>
+                    <p>
+                        The war of two Organizations between <b>"Blue Moon"</b> and <b>"Black Rose"</b>. With the journey of Future Age in World of Mestixz.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
