add some more content in game section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                     </p>
                 </div>
                 <div class="content">
+                    <h2>Timer</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et turpis enim. 
+                        Proin non nunc aliquam, tristique augue quis, posuere turpis. 
+                        Etiam dui dolor, elementum eu congue non, varius vel turpis. Aenean eget auctor turpis. 
+                        Ut scelerisque purus ut dolor elementum bibendum. In vitae porttitor justo. 
+                        Quisque sed hendrerit massa.
+                    </p>
+                </div>
+                <div class="content">
                     <h2>Future War (I - VI)</h2>
                     <p>
                         The war of two Organizations between <b>"Blue Moon"</b> and <b>"Black Rose"</b>. With the journey of Future Age in World of Mestixz.
