add particle in banner

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
     <link rel="stylesheet" href="Style/index.css">
     <link rel="stylesheet" href="Style/header.css">
+    <link rel="stylesheet" href="Style/particle.css">
 
     <link rel="icon" href="image/Logo_ROUNDED.png">
     <title>Project Mestixz</title>
 </head>
 <body>
+
     <header>
         <h1>Project Mestixz</h1>
         <nav>
@@ -35,6 +37,42 @@
                 <h4>Project</h4>
                 <h1>Mestixz</h1>
             </div>
+
+            <div class="particle-container">
+                <!--
+                x = position y =  position
+                xt = horizontal movement speed
+                yt = vertical movement speed
+                xd = horizontal movement distance
+                yd = vertical movement distance
+                w = width & height
+                d = animation delay
+                -->
+                <span style="--x:50; --y:0; --xt:13; --yt:12; --xd:2; --yd:2; --w:25;  --d:1; --o:.9;" class="pt"><b></b></span>
+                <span style="--x:16; --y:0; --xt:17; --yt:10; --xd:3; --yd:1; --w:39;  --d:6; --o:.5;" class="pt"><b></b></span>
+                <span style="--x:16; --y:0; --xt:17; --yt:10; --xd:3; --yd:3; --w:28;  --d:4; --o:.9;" class="pt"><b></b></span>
+                  <span style="--x:66; --y:0; --xt:11; --yt:13; --xd:3; --yd:2; --w:38;  --d:2; --o:.9;" class="pt"><b></b></span>
+                <span style="--x:56; --y:-3; --xt:11; --yt:10; --xd:3; --yd:1; --w:58;  --d:0; --o:.9;" class="pt"><b></b></span>
+                <span style="--x:19; --y:0; --xt:17; --yt:10; --xd:3; --yd:4; --w:45;  --d:9; --o:.7;" class="pt"><b></b></span>
+                <span style="--x:49; --y:0; --xt:17; --yt:10; --xd:3; --yd:-4; --w:65;  --d:2; --o:.6;" class="pt"><b></b></span>
+                <span style="--x:20; --y:0; --xt:13; --yt:12; --xd:2; --yd:4; --w:70;  --d:8; --o:.9;" class="pt"><b></b></span>
+                <span style="--x:35; --y:3; --xt:8; --yt:16; --xd:0.5; --yd:0.8; --w:190; --d:5; --o:.7;" class="pt"><b></b></span>
+                <span style="--x:15; --y:10; --xt:18; --yt:16; --xd:0.5; --yd:1; --w:190; --d:6; --o:.9;" class="pt"><b></b></span>
+                <span style="--x:15; --y:30; --xt:9; --yt:22; --xd:0.5; --yd:1; --w:30; --d:9; --o:.4;" class="pt"><b></b></span>
+                <span style="--x:4; --y:20; --xt:10; --yt:7; --xd:1.5; --yd:1.2; --w:26; --d:12; --o:0.4;" class="pt"><b></b></span> 
+                <span style="--x:50; --y:40; --xt:16; --yt:6; --xd:4; --yd:-2; --w:70; --d:5; --o:0.3;" class="pt"><b></b></span>
+                <span style="--x:50; --y:40; --xt:16; --yt:6; --xd:1; --yd:-2; --w:170; --d:0; --o:1;" class="pt"><b></b></span>
+                 <span style="--x:60; --y:40; --xt:16; --yt:6; --xd:1; --yd:2; --w:70; --d:5; --o:0.4;" class="pt"><b></b></span>
+                <span style="--x:50; --y:50; --xt:12; --yt:7; --xd:1; --yd:1.2; --w:100; --d:7; --o:0.4;" class="pt"><b></b></span>
+                  <span style="--x:70; --y:40; --xt:4; --yt:1; --xd:0.5; --yd:.2; --w:100; --d:7; --o:0.4;" class="pt"><b></b></span>
+                <span style="--x:2; --y:50; --xt:10; --yt:7; --xd:1; --yd:1.2; --w:20; --d:7; --o:0.4;" class="pt"><b></b></span>
+                  <span style="--x:4; --y:50; --xt:10; --yt:7; --xd:1.5; --yd:1.2; --w:16; --d:12; --o:0.4;" class="pt"><b></b></span> 
+                <span style="--x:10; --y:40; --xt:10; --yt:17; --xd:2; --yd:1.2; --w:28; --d:7; --o:0.4;" class="pt"><b></b></span>
+                <span style="--x:70; --y:60; --xt:12; --yt:6; --xd:2; --yd:2; --w:36; --d:5; --o:0.7;" class="pt"><b></b></span>
+                <span style="--x:10; --y:60; --xt:12; --yt:16; --xd:-1; --yd:2.2; --w:80; --d:5; --o:0.7;" class="pt"><b></b></span>
+                <span style="--x:10; --y:70; --xt:12; --yt:26; --xd:-1; --yd:2.2; --w:110; --d:5; --o:0.7;" class="pt"><b></b></span>
+               <span style="--x:19; --y:70; --xt:12; --yt:26; --xd:-1; --yd:3.2; --w:20; --d:5; --o:0.7;" class="pt"><b></b></span>
+              </div>
         </section>
 
         <section class="about" id="about">
