add selection content

--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
         </section>
         <section class="games" id="games">
             <h1>Games</h1>
-            
+            <div class="selection">
+                <div class="selection-content"></div>
+            <div class="selection-content"></div>
+            <div class="selection-content"></div>
+            <div class="selection-content"></div>
+            </div>
         </section>
     </main>
 </body>
