--- a/index.html
+++ b/index.html
@@ -86,13 +86,20 @@
         </section>
         <section class="games" id="games">
             <h1>Games</h1>
-
             <div class="game-content">
                 <div class="selection">
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Worship</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam veritatis aperiam maiores aliquid architecto, autem tempore, dolor et placeat ipsam est laboriosam consequatur vitae vero fugit quod voluptatum excepturi itaque?</p>
+                        <p>The <b style="text-shadow: 0 0 10px aliceblue"> Rougelike game </b> about the story of "Dark Age". </p>
+                    </div>
+                </div>
+
+                <div class="selection">
+                    <div class="selection-content">
+                        <div class="selection-content-emblem"></div>
+                        <h2>Re-Terra</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
                     </div>
                 </div>
 
@@ -100,7 +107,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Moonfall</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minus vitae aut eos quo nobis possimus! Minus dolor eveniet ex sequi assumenda dolorum pariatur distinctio ipsam totam, nulla blanditiis voluptatibus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
                     </div>
                 </div>
 
@@ -116,7 +123,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Future War</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nobis a vero quam laborum ullam, delectus sit officiis ut id unde, vel atque dolore eos cupiditate reprehenderit dicta earum magni.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
                     </div>
                 </div>
 
