Edit Game menu detail

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#banner">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#games">Games</a></li>
-                <li><a href="#">Wiki</a></li>
+                <li><a href="#wiki">Wiki</a></li>
             </ul>
         </nav>
     </header>
@@ -76,12 +76,12 @@
         </section>
 
         <section class="about" id="about">
-            <h1>The world beyond imagination.</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            <h1>The world beyond imagination through Reality.</h1>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Vivamus efficitur eros eget bibendum vehicula. Suspendisse non purus sed quam finibus tempor. 
             Mauris rutrum et quam vel pharetra. Pellentesque efficitur semper ex, vitae finibus ipsum tincidunt ac. 
             Curabitur ac justo risus. Quisque eu orci sapien. Nulla interdum, lorem a lobortis imperdiet, 
-            tortor magna efficitur sem, placerat efficitur ipsum diam sed odio. Etiam id rutrum ex. 
+            tortor magna efficitur sem, placerat efficitur ipsum diam sed odio. Etiam id rutrum ex. "
             Nullam consequat elementum quam a luctus.</p>
         </section>
         <section class="games" id="games">
@@ -91,7 +91,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Worship</h2>
-                        <p>The <b style="text-shadow: 0 0 10px aliceblue"> Rougelike game </b> about the story of "Dark Age". </p>
+                        <p>The <b style="text-shadow: 0 0 10px aliceblue"> Rougelike Game </b> about the story of "Dark Age". </p>
                     </div>
                 </div>
 
@@ -99,7 +99,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Re-Terra</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
+                        <p>The <b style="text-shadow: 0 0 10px aliceblue"> MMOPRG Game </b> about the Origin of "Renaiscia" in Civilize Age</p>
                     </div>
                 </div>
 
@@ -107,15 +107,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Moonfall</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
-                    </div>
-                </div>
-
-                <div class="selection">
-                    <div class="selection-content">
-                        <div class="selection-content-emblem"></div>
-                        <h2>T.I.M.E.R.</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
+                        <p>The <b style="text-shadow: 0 0 10px aliceblue">Action, Hack n Slash Game</b> about the great war in the middle part of Civilize Age</p>
                     </div>
                 </div>
 
@@ -126,7 +118,6 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
