Change some content

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
 
         <section class="about" id="about">
-            <h1>The world beyond imagination through Reality.</h1>
+            <h1>The world of imagination through Reality.</h1>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Vivamus efficitur eros eget bibendum vehicula. Suspendisse non purus sed quam finibus tempor. 
             Mauris rutrum et quam vel pharetra. Pellentesque efficitur semper ex, vitae finibus ipsum tincidunt ac. 
@@ -115,7 +115,7 @@
                     <div class="selection-content">
                         <div class="selection-content-emblem"></div>
                         <h2>Future War</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum totam optio nisi asperiores commodi repellat, accusamus harum tenetur labore quam accusantium ullam a aut maiores quo consequuntur. Quam, dignissimos velit.</p>
+                        <p>The <b style="text-shadow: 0 0 10px aliceblue">Action, Turn-Based Game series</b> About the war in the Future Age.</p>
                     </div>
                 </div>
             </div>
